[package]
name = "linearscan"
version = "0.1.0"
authors = ["Benjamin Bouvier <public@benj.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
bit-set = "0.5.1"
pretty_env_logger = "0.3.1"
log = "0.4.8"

[lib]
name = "linearscan"
path = "src/linearscan.rs"

[[bin]]
name = "lsra"
path = "bin/cli.rs"
